--- a/src/App.css
+++ b/src/App.css
@@ -3,32 +3,6 @@
   background-color: whitesmoke;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 p {
   color: #373741;
 }
@@ -36,9 +10,12 @@ p {
 .BasicBox {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   padding: 2%;
-  margin: 2%;
   background-color: whitesmoke;
   width: 20%;
+  height: 100%;
+}
+
+html, body {
   height: 100%;
 }
 
@@ -49,16 +26,4 @@ h1 {
 
 h2 {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
