--- a/src/styles/InProgress.css
+++ b/src/styles/InProgress.css
@@ -1,6 +1,4 @@
 .in-progress-page { 
-    height: 100vh;
-    width: 100%;
     background: url(../images/renovation.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -8,5 +6,6 @@
     background-size: cover;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+    height: 100%;
 }
