--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ html, body {
 
 h1 {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  color: #b28376;
+  color: #494c5c;
 }
 
 h2 {
